--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "main": "app.js",
   "author": "Dailton-Mac <dailtonbastos@gmail.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
