Primeira roda com Express

--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "author": "Dailton-Mac <dailtonbastos@gmail.com>",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "dev": "nodemon"
+  },
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
