--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon"
   },
   "dependencies": {
+    "bulma": "^0.8.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.8.1"
