--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bulma": "^0.8.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.8.1"
   },
   "devDependencies": {
